src/test/ui/consts/const-ptr-unique.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/const-ptr-unique.rs:8:33
   |
LL |     let x: &'static *mut u32 = &(unique.as_ptr());
   |                                 ^^^^^^^^^^^^^^^^^ temporary value does not live long enough
LL |
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
